Closed
Bug 12345
Opened 26 years ago
Closed 26 years ago
[DOGFOOD] Unable to Forward a message received as an Inline page or an attachment
Categories
(MailNews Core :: Backend, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
M11
People
(Reporter: marina, Assigned: jefft)
References
Details
(Whiteboard: [PDT+][PR1])
Attachments
(1 obsolete file)
Steps to reproduce:
-sent to your testing account a Web page (http://home.netscape.com) from 4.x;
-get it in 5.0;
-click Forward, click Send;
//note: you don't get any e-mail
-now look at your MS-DOS window:in a successful sending you would read
" Looking for identity id1
GenereateAttachmentsString<>
attechment= "
//now note : after looking for identity there is a line
Alert : [String ID...]
-you can successfully Forward a simple message with no attachments
****observerd with 1999-08-20 windows build****
Updated•26 years ago
|
Assignee: phil → jefft
Priority: P3 → P1
Target Milestone: M12
Comment 1•26 years ago
|
||
Beta stopper. TFV M12. Jeff, can you look at this in Rich's absence?
I am crashing when I try to forward message as attachment with today's build
because of failing to create file url.
Summary: Unable to Forward a message received as an Inline page or an attachment → [DOGFOOD] Unable to Forward a message received as an Inline page or an attachment
Check in partial fix to prevent crashing. nsMsgSend.cpp modified.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
All required changes have been checked in. I am marking this bug as fixed.
Thanks to everyone's help.
Comment 10•26 years ago
|
||
Win_nt 4.0 (1999-11-09-11 M11)
Following the exact step, I am unable to forward and sent the attached email.
I am also able to receive it.
| Reporter | ||
Comment 11•25 years ago
|
||
Fenella,
i hope you meant " i am able to forward ..."
Updated•21 years ago
|
Product: MailNews → Core
Comment 12•21 years ago
|
||
*** Bug 288759 has been marked as a duplicate of this bug. ***
Comment 13•18 years ago
|
||
Needs to be fixed for PR1, so I added a note in the Status Whiteboard
Updated•17 years ago
|
Product: Core → MailNews Core
| Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 17•10 years ago
|
||
Comment 18•10 years ago
|
||
Comment on attachment 8665038 [details] [diff] [review]
Some patch.
Oops, sorry.
Attachment #8665038 -
Attachment is obsolete: true
tracking-thunderbird99:
--- → ?
Updated•3 years ago
|
tracking-thunderbird99:
? → ---
Restrict Comments: true
| Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•